--- a/code/React/day7/movie/package.json
+++ b/code/React/day7/movie/package.json
@@ -13,7 +13,8 @@
     "jsonp": "^0.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "wangeditor": "^3.1.1"
   },
   "scripts": {
     "start": "craco start",
